# llama.cpp-to-MLIR

./: .brd.lua  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compiler.cpp  compiler_test.cpp  main.mlir  test_llama.cpp
data/: main.mlir
gguf/: didedoshka.gguf  reader.py  writer.py
mlir/: GGMLOps.cpp  GGMLOps.td
paper/: bibliography.bib  main.typ  template.typ
source/: CMakeLists.txt  Compiler.cpp  Defines.h  MLIRGen.cpp  MLIRGen.h  Utils.cpp  Utils.h  ggml_simple.cpp  main.cpp
source/MLIRGGML/: CMakeLists.txt  GGMLDialect.cpp  GGMLDialect.h  GGMLOps.cpp  GGMLOps.h  GGMLOps.td  LoweringPass.cpp  Passes.h
tools/: CMakeLists.txt  main.cpp
